--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Poetry'
+- GITenberg
 title: The Wind Among the Reeds
 url: http://www.gutenberg.org/ebooks/32233
